<resources>
    <string name="app_name">All_In_One</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name="passord">Passord</string>
    <string name="forgot_passord">Forgot passord</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>