<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2196F3"></androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/imagesback">

        <TextView
            android:id="@+id/tvlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"></TextView>

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvlogin"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="#40ffffff"
            android:drawableStart="@drawable/person_24"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"></EditText>

        <EditText
            android:id="@+id/editpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextText"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:background="#40ffffff"
            android:drawableStart="@drawable/key"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/passord"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"></EditText>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editpass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="#972196F3"
            android:text="log in"
            android:textSize="20sp"
            android:textStyle="bold"></com.google.android.material.button.MaterialButton>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginbtn"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/forgot_passord"
        android:textColor="@color/white"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp"

            >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:contentDescription="@string/todo"
            android:src="@drawable/google"></ImageView>

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
            android:src="@drawable/facebook"></ImageView>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="TODO"
                android:src="@drawable/twitter"></ImageView>

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>